2005-03-10  Mengjie Yu  <meng-jie.yu@sun.com>

	* gtkhtml.c: (gtk_html_set_color):we should pass the insertion_color.

	Fixes: #73216


2005-03-07  Radek Doulik  <rodo@novell.com>

	* htmltext.c (html_text_cursor_next_slave): make sure we handle
	the case where there is second or later empty slave

2005-03-07  Radek Doulik  <rodo@novell.com>

	* htmltextslave.c (html_text_slave_get_left_edge_offset): make
	sure offset is in slave boundaries (should not happen with below
	fixes anymore, but to be sure)

	* htmlcursor.c: pass engine deeper in cursor function so that we
	can call object funtions with painter

	* htmlobject.c: as below

	* htmltext.c: as below

	* htmltextslave.c: add painter to cursor movements function
	arguments to be able to recalculate items. there was a race
	condition where cursor movement happened before line breaks were
	recalculated which lead to infinite loop.

2005-03-03  Radek Doulik  <rodo@novell.com>

	* test-suite.c (test_insert_nested_cluevs): added test for
	inserting nested cluevs

	* htmlengine-edit.c (html_engine_get_insert_level_for_object): new
	helper function, calculates insert level at cursor position for
	object. it makes sure that insert level isn't greater than cursor
	level

2005-02-28  Radek Doulik  <rodo@novell.com>

	* htmltext.c (html_text_direction_pango_to_html): new helper
	function to convert pango direction to gtkhtml's html direction

	* htmlengine.c: parse BR and P direction attribute

	* htmlengine-save.c: save body direction

	* htmlengine-edit.c (html_engine_edit_set_direction): new helper
	function to set direction to cursor flow

	* htmlengine-edit-cut-and-paste.c
	(html_engine_insert_empty_paragraph): use keymap direction for new
	flow

	* htmlclueflow.c: save direction to HTML output

	* gtkhtml.c: use keymap_direction signal on keymap to set flow
	direction. handle widget's direction changed signal to set body
	direction.

2005-02-27  Mengjie Yu  <meng-jie.yu@sun.com>
