@@ -1260,6 +1260,7 @@ block_end_cell (HTMLEngine *e, HTMLObject *clue, HTMLElement *elem)
 {
 	if (html_clue_is_empty (HTML_CLUE (clue)))
 		new_flow (e, clue, create_empty_text (e), HTML_CLEAR_NONE, HTML_DIRECTION_DERIVED);
+	close_flow (e, clue);
 	pop_clue (e);
 }
 
